# InstantChat

./: CMakeLists.txt  README.md
src/Client/: ChatClient.cpp  ChatClient.h  ClientManager.cpp  ClientManager.h  CommandManager.cpp  CommandManager.h  ConfigManager.cpp  ConfigManager.h  FTPClient.cpp  FTPClient.h  TUIManager.cpp  TUIManager.h  main.cpp
src/Generic/: ChatMessage.cpp  ChatMessage.h  ConsoleManager.cpp  ConsoleManager.h  ConsoleManager.hpp  FilePackage.cpp  FilePackage.h  FileUtils.cpp  FileUtils.h  Serializers.h  SignalHandler.cpp  SignalHandler.h  SingletonBase.h  SingletonStack.cpp  SingletonStack.h  TypeTraits.h  TypeUtil.h  Utility.h
src/Server/: ChatRoom.cpp  ChatRoom.h  ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h  ConfigManager.cpp  ConfigManager.h  FTPRoom.cpp  FTPRoom.h  FTServer.cpp  FTServer.h  FTSession.cpp  FTSession.h  ServerManager.cpp  ServerManager.h  main.cpp
test/: CMakeLists.txt  ChatMessageTest.hpp  SerializersTest.hpp  main.cpp
